fixed broken CSS

--- a/app/styles/pathfinding/index.scss
+++ b/app/styles/pathfinding/index.scss
@@ -1,4 +1,4 @@
-body {
+.pathfinding-parent {
   width: fit-content;
 }
 .grid-container {
